@@ -1,3 +1,9 @@
+2001-07-25  David Edelsohn  <edelsohn@gnu.org>
+
+	* include/bits/limits_generic.h (int): Set digits and digits10
+	appropriately for word size.
+	(unsigned int,long,unsigned long): Likewise.
+
 2001-07-19  Phil Edwards  <pme@sources.redhat.com>
             Mark Mitchell <mark@codesourcery.com>
 
